<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Open Live</string>

    <string name="label_settings">Settings</string>

    <string name="msg_choose_role">Would you like to be the broadcaster or an audience?</string>

    <string name="label_audience">Audience</string>

    <string name="label_broadcaster">Broadcaster</string>

    <string name="label_confirm">Confirm</string>
    <string name="user_name">User Name</string>
    <string name="user_pass">Password</string>
    <string name="Login">Login</string>
    <string name="auth_failed">Wrong ID or password</string>
    <string name="topic_name">room name</string>
    <string name="level">Level :</string>
    <string name="Start">Start</string>
    <string name="email">your email</string>
    <string name="fogot_pass"><u>Fogot your password?</u></string>

    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>

    <string-array name="string_array_frame_rate">
        <item>15</item>
        // 120P
        <item>15</item>
        // 180P
        <item>15</item>
        // 240P
        <item>15</item>
        // 360P
        <item>15</item>
        // 480P
        <item>15</item>
        // 720P
    </string-array>

    <string-array name="string_array_bit_rate">
        <item>80</item>
        // 120P
        <item>160</item>
        // 180P
        <item>200</item>
        // 240P
        <item>400</item>
        // 360P
        <item>500</item>
        // 480P
        <item>1000</item>
        // 720P
    </string-array>
</resources>
