<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:gravity="center">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:layout_marginLeft="16dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardBackgroundColor="#ffffff">
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
           <EditText
               android:layout_width="match_parent"
               android:inputType="textEmailAddress"
               android:layout_height="wrap_content"
               android:hint="@string/user_name"
               android:id="@+id/acti_login_edittext_username"/>
            <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_pass"
                android:id="@+id/acti_login_edittext_pass"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acti_login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Singing"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fogot_pass"
                android:layout_gravity="center"
                android:selectAllOnFocus="false"
                android:linksClickable="false"
                android:autoLink="all"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="12dp"
        android:id="@+id/view2"
        app:cardCornerRadius="50dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:layout_marginTop="-50dp"
        android:thicknessRatio="1.9">
        <ImageView
            android:layout_height="95dp"
            android:layout_width="95dp"
            android:layout_gravity="center"
            android:id="@+id/imageView1"
            android:src="@drawable/logo_oym"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
